fix: item image overflow

--- a/src/app/shared/components/item-image-container/item-image-container.component.sass
+++ b/src/app/shared/components/item-image-container/item-image-container.component.sass
@@ -12,6 +12,7 @@
   display: flex
   align-items: center
   justify-items: center
+  overflow: hidden
 
 .item-rarity-1
   background: #676f7c
